--- a/.github/workflows/ping2.yml
+++ b/.github/workflows/ping2.yml
@@ -2,12 +2,15 @@ name: Keep Streamlit Awake
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # jalan tiap 15 menit
+    - cron: "*/15 * * * *"   # tiap 15 menit
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping Streamlit App
-        run: curl -I https://bonusmalusideal.streamlit.app/
+      - name: Wake Streamlit App
+        run: |
+          curl -L \
+          -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64)" \
+          https://bonusmalusideal.streamlit.app/
